src/test/ui/feature-gates/feature-gate-type_alias_enum_variants.stderr
error: enum variants on type aliases are experimental
  --> $DIR/feature-gate-type_alias_enum_variants.rs:19:13
   |
LL |     let t = Alias::Bar(0);
   |             ^^^^^^^^^^
   |
   = help: add `#![feature(type_alias_enum_variants)]` to the crate attributes to enable

error: enum variants on type aliases are experimental
  --> $DIR/feature-gate-type_alias_enum_variants.rs:21:13
   |
LL |     let t = Alias::Baz { i: 0 };
   |             ^^^^^^^^^^
   |
   = help: add `#![feature(type_alias_enum_variants)]` to the crate attributes to enable

error: enum variants on type aliases are experimental
  --> $DIR/feature-gate-type_alias_enum_variants.rs:24:9
   |
LL |         Alias::Bar(_i) => {}
   |         ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(type_alias_enum_variants)]` to the crate attributes to enable

error: enum variants on type aliases are experimental
  --> $DIR/feature-gate-type_alias_enum_variants.rs:26:9
   |
LL |         Alias::Baz { i: _i } => {}
   |         ^^^^^^^^^^
   |
   = help: add `#![feature(type_alias_enum_variants)]` to the crate attributes to enable

error: aborting due to 4 previous errors

